src/main/java/com/example/gitrepoexplorer/infrastructure/error/exceptions/UserNotFoundException.java
package com.example.gitrepoexplorer.infrastructure.error.exceptions;

public class UserNotFoundException extends RuntimeException {
    public UserNotFoundException(String message){
        super(message);
    }
}
